--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "@rematch/core": "^0.4.1"
+    "@rematch/core": "^0.4.1",
+    "react-redux": "^5.0.7"
   }
 }
