apparently a bunch of changes. added a snapshot test. added helix ui styles

--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "devDependencies": {
     "@rematch/core": "^0.4.1",
+    "enzyme": "^3.3.0",
+    "helix-ui": "^0.3.0",
     "react-redux": "^5.0.7"
   }
 }
